--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <!-- task 10 -->
-    <script src="math.js"></script>
+    <script src="operators.js"></script>
 </body>
 </html>
